tests/errors/program.panic.res
done
>> Program | File: program.panic.art
     error | Line: 3
           | 
           | System crashed